2008-05-23  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_launch_player), (totem_embedded_get_app_for_uri),
	(totem_embedded_update_menu), (on_open1_activate), (main):
	Use GIO and GDK to launch the full-blown player, startup notification
	only available with GTK+ 2.13 (Closes: #512587)
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle): Remove remains of gnome-vfs
	code, gvfs doesn't support passing credentials in the URI anyway
	* configure.in: Remove gnome-vfs deps, not used anymore

2008-05-23  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/publish/totem-publish.c:
	(totem_publish_plugin_stream_cb): Improve my fix for a signed/unsigned
	comparison warning.
	* src/plugins/youtube/youtube.py:
	* src/plugins/youtube/youtube.ui: Add a progress bar when doing
	YouTube searches to show the current status of the operation.
	(Closes: #522548)

2008-05-23  Kjartan Maraas  <kmaraas@gnome.org>

	* src/plugins/publish/publish-plugin.ui:
	Don't translate widget label.

2008-05-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-audio-preview.c (main):
	* src/totem-video-indexer.c (main):
	* src/totem-video-thumbnailer.c (main): Use
	g_option_context_get_help () to print out the help

============ Version 2.23.3

2008-05-14  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.23.3

2008-05-11  Guillaume Desmottes  <gdesmott@gnome.org>
	* COPYING
	* src/totem-subtitle-encoding.c: Change licence from GPL
	to LGPL (closes: #515809)

2008-05-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: fix plugin not showing up on
	http://www.la1.be 's "journal télévisé" (closes: #532260)

2008-05-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (resolve_redirect),
	(on_got_redirect): Same change for the browser plugin

2008-05-08  Bastien Nocera  <hadess@hadess.net>
